--- a/styles.css
+++ b/styles.css
@@ -2,15 +2,22 @@
 .masthead {
     height: 100vh;
     min-height: 500px;
-    background-image: url('images/background-milk.png');
+    /* background-image: url('images/background-milk.png'); */
+    background-image: url('images/paris1.png');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
+    /* border-radius: 0px 0px 20px 20px; */
+    /* background-color: black; */
   }
 
   .btn:hover, btn:focus {
     outline: none;
     text-decoration: none;
+  }
+
+  a {
+    color: blue;
   }
 
   a:hover {
@@ -26,9 +33,25 @@
 
 
 /* Local -> Home page for SMARTPHONE */
+/* .nav-wrapper {
+  width: 100%;
+} */
+
 .nav-wrapper {
   width: 100%;
+  border-radius: 0px 0px 20px 20px;
+  padding-bottom: 15px;
+  background-color: rgba(0, 0, 50, 0.8);
 }
+
+
+/* .nav-wrapper {
+  width: 100%;
+  position: fixed;
+  background-color: rgba(0, 0, 0, 0.5);
+  border-radius: 0px 0px 20px 20px;
+  padding-bottom: 15px;
+} */
 
 .nav-home-logo-button {
   display: inline;
@@ -37,6 +60,7 @@
   font-family: 'Exo 2', sans-serif;
   font-weight: 100;
   font-size: 40px;
+  color: blue;
 }
 
 .nav-home-button {
@@ -45,6 +69,7 @@
   font-family: 'Exo 2', sans-serif;
   font-weight: 300;
   font-size: 30px;
+  color: blue;
 }
 
 .download {
@@ -67,7 +92,6 @@
   font-family: 'Exo 2', sans-serif;
   font-weight: 300;
   font-size: 30px;
-  /* color: white; */
   color: blue;
 }
 
@@ -98,12 +122,17 @@ video {
 
 .footer {
   position: fixed;
+  border-radius: 20px 20px 0px 0px;
    padding: 10px 0px 0px 0px;
    left: 0;
    bottom: 0;
    width: 100%;
-   background-color: white;
+   /* background-color: white; */
+   /* background-color: rgba(255, 255, 255, 0.05); */
+   /* background-color: rgba(0, 0, 0, 0.5); */
+   background-color: rgba(0, 0, 50, 0.8);
    margin: auto;
+   /* opacity: 0.6; */
 }
 
 .nav-pages {
@@ -112,7 +141,7 @@ video {
   height: 20px;
   /* margin: 10px 0px 0px 20px; */
   font-family: 'Exo 2', sans-serif;
-  font-weight: 300;
+  font-weight: 500;
   font-size: 15px;
 }
 
