--- a/stylesDinov.css
+++ b/stylesDinov.css
@@ -73,7 +73,6 @@ a, a:hover {
 
 .sub-title {
   padding: 90px 0px 0px 0px;
-  /* margin: 90px 0px 0px 0px; */
   font-family: 'Exo 2', sans-serif;
   font-weight: 300;
   font-size: 25px;
@@ -115,7 +114,8 @@ a, a:hover {
   margin-left: auto;
   margin-right: auto;
   margin-top: 10px;
-  width: 30%;
+  /* width: 30%; */
+  width: 95px;
   border-radius: 20px 20px 20px 20px;
 }
 
@@ -234,7 +234,8 @@ a, a:hover {
     margin-left: auto;
     margin-right: auto;
     margin-top: 10px;
-    width: 40%;
+    /* width: 40%; */
+    width: 145px;
     border-radius: 20px 20px 20px 20px;
   }
 }
@@ -245,7 +246,8 @@ a, a:hover {
     margin-left: auto;
     margin-right: auto;
     margin-top: 20px;
-    width: 60%;
+    /* width: 60%; */
+    width: 200px;
     border-radius: 20px 20px 20px 20px;
   }
 }
@@ -256,7 +258,8 @@ a, a:hover {
     margin-left: auto;
     margin-right: auto;
     margin-top: 20px;
-    width: 45%;
+    /* width: 45%; */
+    width: 185px;
     border-radius: 20px 20px 20px 20px;
   }
 }
@@ -267,7 +270,8 @@ a, a:hover {
     margin-left: auto;
     margin-right: auto;
     margin-top: 20px;
-    width: 55%;
+    /* width: 55%; */
+    width: 230px;
     border-radius: 20px 20px 20px 20px;
   }
 }
@@ -278,7 +282,8 @@ a, a:hover {
     margin-left: auto;
     margin-right: auto;
     margin-top: 20px;
-    width: 47%;
+    /* width: 47%; */
+    width: 370px;
     border-radius: 20px 20px 20px 20px;
   }
 }
@@ -289,7 +294,8 @@ a, a:hover {
     margin-left: auto;
     margin-right: auto;
     margin-top: 20px;
-    width: 50%;
+    /* width: 50%; */
+    width: 550px;
     border-radius: 20px 20px 20px 20px;
   }
 }
@@ -308,8 +314,51 @@ a, a:hover {
   }
 
   .sub-title {
+    /* padding: 90px 0px 0px 38px; */
+
+    font-family: 'Exo 2', sans-serif;
+    font-weight: 300;
+    font-size: 25px;
+    color: blue;
+    text-align: left;
+  }
+
+  .logo-map {
+    margin: -10px 0px 0px -22px;
+    width: 80px;
+    height: 80px;
+  }
+  /* ******************* */
+
+
+  .title {
+    width: 50%;
+    /* padding: 0px 0px 0px 77px; */
+    font-family: 'Exo 2', sans-serif;
+    font-weight: 300;
+    font-size: 35px;
+    color: blue;
+    text-align: left;
+    margin-left: 20px;
+  }
+
+  .paragraph {
+    width: 50%;
+    margin: 20px 20px 0px 20px;
+    font-family: 'Exo 2', sans-serif;
+    font-weight: 100;
+    font-size: 15px;
+    color: blue;
+    /* text-align: center; */
+    text-align: left;
+  }
+  /* .header-content {
+    width: 50%;
+    margin-left: 20px;
+  }
+
+  .sub-title {
     padding: 90px 0px 0px 0px;
-    /* margin: 90px 0px 0px 0px; */
     font-family: 'Exo 2', sans-serif;
     font-weight: 300;
     font-size: 25px;
@@ -324,11 +373,11 @@ a, a:hover {
     margin-right: auto;
     width: 80px;
     height: 80px;
-  }
+  } */
   /* ******************* */
 
 
-  .title {
+  /* .title {
     width: 50%;
     margin: 0px 20px 0px 20px;
     font-family: 'Exo 2', sans-serif;
@@ -346,7 +395,7 @@ a, a:hover {
     font-size: 15px;
     color: blue;
     text-align: center;
-  }
+  } */
 
   .video-header {
     float: right;
@@ -397,7 +446,7 @@ a, a:hover {
   .header-content {
     width: 50%;
     padding-top: 100px;
-    margin-left: 60px;
+    /* margin-left: 60px; */
     margin-left: 100px;
   }
 
@@ -445,7 +494,19 @@ a, a:hover {
     float: right;
     display: block;
     margin: -240px 100px 0px 0px;
-    width: 30%;
+    /* width: 30%; */
+    width: 310px;
+    border-radius: 20px 20px 20px 20px;
+  }
+}
+
+@media screen and (min-width: 1300px) and (orientation: landscape) {
+  .video-header {
+    float: right;
+    display: block;
+    margin: -240px 100px 0px 0px;
+    /* width: 30%; */
+    width: 450px;
     border-radius: 20px 20px 20px 20px;
   }
 }
@@ -537,12 +598,13 @@ a, a:hover {
     display: block;
     margin: -240px 300px 0px 0px;
     width: 30%;
+    /* width: 100px; */
     border-radius: 20px 20px 20px 20px;
   }
 }
 
 
-@media screen and (min-width: 1600px) and (orientation: landscape) {
+/* @media screen and (min-width: 1600px) and (orientation: landscape) {
   .video-header {
     float: right;
     display: block;
@@ -550,7 +612,7 @@ a, a:hover {
     width: 25%;
     border-radius: 20px 20px 20px 20px;
   }
-}
+} */
 
 @media screen and (min-width: 1800px) and (orientation: landscape) {
   /* nav */
@@ -725,4 +787,27 @@ a, a:hover {
     width: 18%;
     border-radius: 20px 20px 20px 20px;
   }
+}
+
+
+
+/* Specific css for business page */
+
+.paragraph-title {
+  padding: 90px 0px 0px 0px;
+  font-family: 'Exo 2', sans-serif;
+  font-weight: 300;
+  font-size: 20px;
+  color: blue;
+  text-align: center;
+}
+
+.paragraph-title1 {
+  margin-top: 60px;
+  /* padding: 0px 0px 0px 0px; */
+  font-family: 'Exo 2', sans-serif;
+  font-weight: 300;
+  font-size: 15px;
+  color: blue;
+  text-align: center;
 }
