--- a/stylesBusiness.css
+++ b/stylesBusiness.css
@@ -11,16 +11,22 @@
     color: blue;
     text-decoration: none;
   }
+
+  body {
+    background-color: black;
+  }
   
 /* ******************************* header frame*/
   .masthead {
       height: 100vh;
       min-height: 500px;
-      background-image: url('images/paris1.png');
+      /* background-image: url('images/paris1.png'); */
       background-size: cover;
       background-position: center;
       background-repeat: no-repeat;
-    }
+      /* background-image: url('images/goldendustSharpen25.png'); */
+      background-image: url('images/goldedust.png');
+  }
   /* nav frame with content */
   .nav-wrapper {
     width: 100%;
@@ -65,7 +71,8 @@
     font-family: 'Exo 2', sans-serif;
     font-weight: 300;
     font-size: 18px;
-    color: blue;
+    /* color: blue; */
+    color: white;
     text-align: center;
   }
 
@@ -97,6 +104,8 @@
     font-weight: 300;
     font-size: 35px;
     color: blue;
+    /* color: white; */
+    /* color: #00009B; */
     text-align: center;
   }
 
@@ -116,13 +125,26 @@
   }
 /* ******************************* */
 
+
+/* .main-page-container {
+  background-position: center;
+  /* margin-top: -20px; */
+  /* padding-top: -20px; */
+    /* background-repeat: no-repeat; */
+    /* background-image: url('images/goldendustSharpen25.png'); */
+/* } */
+
+
 /* ******************************* Element For light Page content */
   .content-container {
     width: 100%;
     margin-top: -20px;
     padding-bottom: 20px;
-    background-color: white;
+    /* background-color: white; */
+    background-color: rgba(10, 10, 10, 1);
+    /* background-color: rgba(0, 0, 40, 1); */
     border-radius: 20px 20px 0px 0px;
+    border-width: 10;
   }
 
   .paragraph {
@@ -131,7 +153,8 @@
     font-family: 'Exo 2', sans-serif;
     font-weight: 300;
     font-size: 18px;
-    color: blue;
+    /* color: blue; */
+    color: white;
     text-align: center;
   }
 
@@ -141,7 +164,7 @@
     font-family: 'Exo 2', sans-serif;
     font-weight: 100;
     font-size: 18px;
-    color: blue;
+    color: white;
     text-align: center;
   }
 
@@ -170,7 +193,10 @@
     width: 100%;
     margin-top: -20px;
     padding-bottom: 20px;
-    background-color: blue;
+    /* background-color: blue; */
+    /* background-color: rgba(25, 25, 112, 1); */
+    background-color: black;
+    /* background-color: rgba(0, 0, 0, 0.9); */
     border-radius: 20px 20px 0px 0px;
   }
 
@@ -209,7 +235,8 @@
     font-family: 'Exo 2', sans-serif;
     font-weight: 300;
     font-size: 35px;
-    color: white;
+    /* color: white; */
+    color: blue;
     text-align: center;
   }
 /* ******************************* */
@@ -243,7 +270,7 @@
      left: 0;
      bottom: 0;
      width: 100%;
-     background-color: rgba(0, 0, 50, 0.9);
+     background-color: rgba(0, 0, 0, 0.9);
      margin-top: -20px;
   }
   .nav-pages {
@@ -351,7 +378,7 @@
         font-family: 'Exo 2', sans-serif;
         font-weight: 300;
         font-size: 18px;
-        color: blue;
+        color: white;
         text-align: left;
     }
     .title-header {
@@ -434,7 +461,7 @@
         font-family: 'Exo 2', sans-serif;
         font-weight: 300;
         font-size: 18px;
-        color: blue;
+        color: white;
         text-align: left;
     }
     .paragraph-header-1 {
@@ -445,7 +472,7 @@
         font-size: 20px; */
         font-weight: 300;
         font-size: 18px;
-        color: blue;
+        color: white;
         text-align: left;
     }
     .sub-title-header {
@@ -491,7 +518,7 @@
         font-family: 'Exo 2', sans-serif;
         font-weight: 100;
         font-size: 18px;
-        color: blue;
+        color: white;
         text-align: center;
     }
     .paragraph-1-dark {
@@ -547,7 +574,7 @@
       padding-top: 100px;
       margin-left: 300px;
     }
-    .paragraph-header {
+    /* .paragraph-header {
         padding: 90px 0px 0px 0px;
         font-family: 'Exo 2', sans-serif;
         font-weight: 300;
@@ -580,7 +607,7 @@
         font-size: 35px;
         color: blue;
         text-align: left;
-    }
+    } */
     .carousel-frame {
         display: block;
         width: 100%;
@@ -607,7 +634,7 @@
         font-family: 'Exo 2', sans-serif;
         font-weight: 100;
         font-size: 18px;
-        color: blue;
+        color: white;
         text-align: center;
     }
     .paragraph-1-dark {
@@ -664,7 +691,7 @@
         font-family: 'Exo 2', sans-serif;
         font-weight: 100;
         font-size: 18px;
-        color: blue;
+        color: white;
         text-align: center;
     }
     .paragraph-1-dark {
@@ -721,7 +748,7 @@
         font-family: 'Exo 2', sans-serif;
         font-weight: 100;
         font-size: 18px;
-        color: blue;
+        color: white;
         text-align: center;
     }
     .paragraph-1-dark {
@@ -778,7 +805,7 @@
         font-family: 'Exo 2', sans-serif;
         font-weight: 100;
         font-size: 18px;
-        color: blue;
+        color: white;
         text-align: center;
     }
     .paragraph-1-dark {
