--- a/styles.css
+++ b/styles.css
@@ -1,23 +1,32 @@
 /* Global */
 .masthead {
-    height: 100vh;
+    /* height: 100vh; */
     min-height: 500px;
-    /* background-image: url('images/background-milk.png'); */
-    background-image: url('images/paris1.png');
+    /* background-image: url('images/paris1.png'); */
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
-    /* border-radius: 0px 0px 20px 20px; */
+    /* Frost */
+    background: #000428;
+    background: -webkit-linear-gradient(to right, #004e92, #000428);
+    background: linear-gradient(to right, #004e92, #000428);
     /* background-color: black; */
-  }
+    /* background: linear-gradient(217deg, rgba(255,0,0,.8), rgba(255,0,0,0) 70.71%),
+            linear-gradient(127deg, rgba(0,255,0,.8), rgba(0,255,0,0) 70.71%),
+            linear-gradient(336deg, rgba(0,0,255,.8), rgba(0,0,255,0) 70.71%); */
+            /* background: #fc00ff; 
+            background: -webkit-linear-gradient(to right, #fc00ff, #00dbde);
+            background: linear-gradient(to right, #fc00ff, #00dbde); */
 
-  .btn:hover, btn:focus {
-    outline: none;
-    text-decoration: none;
-  }
+            /* background: #fbd3e9; 
+            background: -webkit-linear-gradient(to right, #fbd3e9, #bb377d); 
+            background: linear-gradient(to right, #fbd3e9, #bb377d); */
 
-  a {
-    color: blue;
+            /* background: #DA22FF;
+background: -webkit-linear-gradient(to right, #9733EE, #DA22FF);
+background: linear-gradient(to right, #9733EE, #DA22FF);  */
+
+/* background-image: linear-gradient(to right, #6a11cb 0%, #2575fc 100%); */
   }
 
   a:hover {
@@ -27,313 +36,236 @@
   button:hover, button:focus {
     outline: none;
     border: none;
+    text-decoration: none;
   }
 
 
-
-
-/* Local -> Home page for SMARTPHONE */
-/* .nav-wrapper {
-  width: 100%;
-} */
-
+/* Nav content */
 .nav-wrapper {
-  width: 100%;
-  border-radius: 0px 0px 20px 20px;
-  padding-bottom: 15px;
-  background-color: rgba(0, 0, 50, 0.8);
-}
-
-
-/* .nav-wrapper {
-  width: 100%;
   position: fixed;
-  background-color: rgba(0, 0, 0, 0.5);
-  border-radius: 0px 0px 20px 20px;
-  padding-bottom: 15px;
-} */
-
-.nav-home-logo-button {
-  display: inline;
-  /* Top, right, bottom, left */
-  padding: 20px 0px 0px 20px;
-  font-family: 'Exo 2', sans-serif;
-  font-weight: 100;
-  font-size: 40px;
-  color: blue;
+  width: 100%;
+  height: 35px;
+  backdrop-filter: blur(5px);
+  background-color: rgba(0, 0, 0, 0.7);
 }
-
+.nav-wrapper h1 a, a:visited {
+  color: white;
+}
 .nav-home-button {
-  display: inline;
-  padding: 20px 0px 0px 5px;
+  float: left;
+  margin: 4px 0px 0px 10px;
   font-family: 'Exo 2', sans-serif;
-  font-weight: 300;
-  font-size: 30px;
-  color: blue;
+  font-weight: 500;
+  font-size: 20px;
 }
 
 .download {
+  background: none;
   border: none;
   border-radius: 5px 5px 5px 5px;
   float: right;
-  padding: 0px; 
-  margin: 17px 20px 0px 0px;
+  padding: 0;
+  margin: 4px 10px 0px 0px;
 }
 .download img {
-  height: 30px;
-  width: 90px;
+  width: 80px;
+  height: auto;
 }
 
 
-/* Page Content */
-
-.title {
-  padding: 30px 0px 0px 20px;
+/* Header Content */
+.app {
+  margin: 0 auto;
+  width: 80px;
+  height: 80px;
+  border-radius: 20px 20px 20px 20px;
+  background: #000428;
+  background: -webkit-linear-gradient(to right, #004e92, #000428);
+  background: linear-gradient(to right, #004e92, #000428);
+}
+.app-dinov-logo {
+  padding-top: 5px;
+  text-align: center;
   font-family: 'Exo 2', sans-serif;
-  font-weight: 300;
-  font-size: 30px;
-  color: blue;
+  font-weight: 100;
+  font-size: 50px;
+  color: white;
+}
+.app-name {
+  padding-top: 5px;
+  font-family: 'Exo 2', sans-serif;
+  font-weight: 400;
+  font-size: 15px;
+  color: white;
+  text-align: center;
 }
 
-video {
-  float: right;
-  /* margin: 10px 0px 0px 20px; */
-  margin: 30px 20px 10px 0px;
-  width: 65%;
+
+.title-header {
+  font-family: 'Exo 2', sans-serif;
+  font-weight: 500;
+  font-size: 45px;
+  color: white;
+  text-align: center;
+}
+.video-header {
+  display: block;
+  margin: 0 auto;
+  width: 200px;
+  height: auto;
   border-radius: 20px 20px 20px 20px;
 }
 
-/* footer {
-  clear: both;
-  position: relative;
-  height: 100px;
-  margin-top: -200px;
-  padding: 30px 0px 0px 0px;
-} */
-
-/* .nav-pages {
-  height: 20px;
-  margin: 10px 0px 0px 20px;
-  font-family: 'Exo 2', sans-serif;
-  font-weight: 300;
-  font-size: 15px;
-} */
-
-
-.footer {
-  position: fixed;
+/* Footer */
+.grid-container {
+  padding: 20px 0px 20px 0px;
+  background-color: rgba(255, 255, 255, 1);
   border-radius: 20px 20px 0px 0px;
-   padding: 10px 0px 0px 0px;
-   left: 0;
-   bottom: 0;
-   width: 100%;
-   /* background-color: white; */
-   /* background-color: rgba(255, 255, 255, 0.05); */
-   /* background-color: rgba(0, 0, 0, 0.5); */
-   background-color: rgba(0, 0, 50, 0.8);
-   margin: auto;
-   /* opacity: 0.6; */
+  margin-top: -20px;
+  position: relative;
+  width: 100%;
+  height: 140px;
+  bottom: 0;
+  display: grid;
+  row-gap: 0px;
+  grid-template-columns: auto;
 }
-
-.nav-pages {
-  text-align: center;
-  width: 50%;
-  height: 20px;
-  /* margin: 10px 0px 0px 20px; */
+.grid-item {
+  text-align: left;
+  padding-left: 10px;
+  height: 25px;
+}
+.nav-btn {
   font-family: 'Exo 2', sans-serif;
   font-weight: 500;
   font-size: 15px;
 }
 
+/* ******************************* FOR SMARTPHONES PORTRAIT DISPLAY */
+@media (min-width: 750px) and (min-height: 1000px) {
+  .masthead {
+    height: 100vh;
+  }
 
+  /* Header content */
+  .video-header {
+    width: 330px;
+  }
 
-/* This works */
-.btn-group {
-  padding: 0px 0px 0px 0px;
-  width: 100%;
-  margin: auto;
+  /* Footer */
+  .grid-container {
+    padding: 7px 0px 0px 0px;
+    position: fixed;
+    height: 35px;
+    grid-template-columns: auto auto auto auto;
+  }
+  .grid-item {
+    text-align: center;
+  }
 }
 
-
-/* ******************************************************************************* */
-
-/* For Tablets */
-
-@media only screen and (min-width: 768px) {
-
-  /* Page Content */
-  .title {
-    float: left;
-    padding: 130px 0px 0px 20px;
-    font-family: 'Exo 2', sans-serif;
-    font-weight: 300;
-    font-size: 30px;
-    /* color: white; */
-    color: blue;
-  }
-
-  video {
-    float: right;
-    /* margin: 10px 0px 0px 20px; */
-    margin: 60px 20px 10px 0px;
-    width: 40%;
-    border-radius: 20px 20px 20px 20px;
-  }
-  
-}
-
-@media only screen and (min-width: 1000px) {
-
-  .nav-home-logo-button {
-    display: inline;
-    /* Top, right, bottom, left */
-    padding: 20px 0px 0px 100px;
-    font-family: 'Exo 2', sans-serif;
-    font-weight: 100;
-    font-size: 40px;
-  }
-  
+@media (min-width: 1000px) and (min-height: 1200px) {
+  /* Nav content */
   .nav-home-button {
-    display: inline;
-    padding: 20px 0px 0px 5px;
-    font-family: 'Exo 2', sans-serif;
-    font-weight: 300;
-    font-size: 30px;
+    margin: 4px 0px 0px 100px;
+  }
+  .download {
+    margin: 4px 100px 0px 0px;
   }
   
-  .download {
-    border: none;
-    border-radius: 5px 5px 5px 5px;
-    float: right;
-    padding: 0px; 
-    margin: 17px 100px 0px 0px;
+  /* Header content */
+  .video-header {
+    width: 450px;
   }
-  .download img {
-    height: 30px;
-    width: 90px;
+}
+/* ******************************* */
+
+/* ******************************* FOR SMARTPHONES LANDSCAPE DISPLAY */  
+@media screen and (min-width: 1000px) and (orientation: landscape) {
+  .masthead {
+    height: 100vh;
   }
 
-/* Page Content */
-  .title {
-    float: left;
-    padding: 130px 0px 0px 100px;
-    font-family: 'Exo 2', sans-serif;
-    font-weight: 300;
-    font-size: 30px;
-    /* color: white; */
-    color: blue;
+  /* Header content */
+  .video-header {
+    width: 185px;
   }
 
-  video {
-    float: right;
-    /* margin: 10px 0px 0px 20px; */
-    margin: 60px 100px 10px 0px;
-    width: 30%;
-    border-radius: 20px 20px 20px 20px;
+  /* Footer */
+  .grid-container {
+    padding: 7px 0px 0px 0px;
+    position: fixed;
+    height: 35px;
+    grid-template-columns: auto auto auto auto;
   }
-
+  .grid-item {
+    text-align: center;
+  }
+}
+  
+@media screen and (min-width: 1300px) and (orientation: landscape) {
+/* Nav content */
+.nav-home-button {
+  margin: 4px 0px 0px 100px;
+}
+.download {
+  margin: 4px 100px 0px 0px;
 }
 
-@media only screen and (min-width: 1430px) {
-
-  .nav-home-logo-button {
-    display: inline;
-    /* Top, right, bottom, left */
-    padding: 20px 0px 0px 200px;
-    font-family: 'Exo 2', sans-serif;
-    font-weight: 100;
-    font-size: 40px;
-  }
-  
-  .nav-home-button {
-    display: inline;
-    padding: 20px 0px 0px 5px;
-    font-family: 'Exo 2', sans-serif;
-    font-weight: 300;
-    font-size: 30px;
-  }
-  
-  .download {
-    border: none;
-    border-radius: 5px 5px 5px 5px;
-    float: right;
-    padding: 0px; 
-    margin: 17px 200px 0px 0px;
-  }
-  .download img {
-    height: 30px;
-    width: 90px;
-  }
-
-/* Page Content */
-  .title {
-    float: left;
-    padding: 130px 0px 0px 200px;
-    font-family: 'Exo 2', sans-serif;
-    font-weight: 300;
-    font-size: 30px;
-    /* color: white; */
-    color: blue;
-  }
-
-  video {
-    float: right;
-    /* margin: 10px 0px 0px 20px; */
-    margin: 60px 200px 10px 0px;
-    width: 25%;
-    border-radius: 20px 20px 20px 20px;
-  }
-
+/* Header content */
+.video-header {
+width: 330px;
 }
+}
+/* ******************************* */
 
-@media only screen and (min-width: 2000px) {
+/* For DESKTOP LANDSCAPE */
 
-  .nav-home-logo-button {
-    display: inline;
-    /* Top, right, bottom, left */
-    padding: 20px 0px 0px 600px;
-    font-family: 'Exo 2', sans-serif;
-    font-weight: 100;
-    font-size: 40px;
-  }
+@media screen and (min-width: 1600px) and (orientation: landscape) {
+/* Nav content */
+.nav-home-button {
+  margin: 4px 0px 0px 200px;
+}
+.download {
+  margin: 4px 200px 0px 0px;
+}
+.video-header {
+  width: 255px;
+}
+}
   
-  .nav-home-button {
-    display: inline;
-    padding: 20px 0px 0px 5px;
-    font-family: 'Exo 2', sans-serif;
-    font-weight: 300;
-    font-size: 30px;
-  }
+@media screen and (min-width: 1800px) and (orientation: landscape) {
+/* Nav content */
+.nav-home-button {
+  margin: 4px 0px 0px 300px;
+}
+.download {
+  margin: 4px 300px 0px 0px;
+}
+.video-header {
+  width: 310px;
+}
+}
   
-  .download {
-    border: none;
-    border-radius: 5px 5px 5px 5px;
-    float: right;
-    padding: 0px; 
-    margin: 17px 600px 0px 0px;
-  }
-  .download img {
-    height: 30px;
-    width: 90px;
-  }
-
-/* Page Content */
-  .title {
-    float: left;
-    padding: 130px 0px 0px 600px;
-    font-family: 'Exo 2', sans-serif;
-    font-weight: 300;
-    font-size: 30px;
-    /* color: white; */
-    color: blue;
-  }
-
-  video {
-    float: right;
-    /* margin: 10px 0px 0px 20px; */
-    margin: 60px 600px 10px 0px;
-    width: 25%;
-    border-radius: 20px 20px 20px 20px;
-  }
-
+@media screen and (min-width: 2100px) and (orientation: landscape) {
+/* Nav content */
+.nav-home-button {
+margin: 4px 0px 0px 400px;
+}
+.download {
+margin: 4px 400px 0px 0px;
+}
+.video-header {
+width: 310px;
+}
+}
+  
+@media screen and (min-width: 2400px) and (orientation: landscape) {
+/* Nav content */
+.nav-home-button {
+  margin: 4px 0px 0px 500px;
+}
+.download {
+  margin: 4px 500px 0px 0px;
+}
 }
